[package]
name = "ravends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
indicatif = "0.17.7"
nitro_fs = "0.2.0"
term-table = "1.3.2"
thiserror = "1.0.56"
